--- a/assets/src/less/extra.less
+++ b/assets/src/less/extra.less
@@ -3,7 +3,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
-/* 
+/*
     Created on : Feb 6, 2017, 11:01:53 AM
     Author     : rafsun
 */
@@ -15,17 +15,4 @@ and open the template in the editor.
     width: 35px;
     top:45%;
     left:50%;
-}
-
-.dokan-shipping-calculate-wrapper {
-    .dokan-shipping-country-wrapper,
-    .dokan-shipping-state-wrapper,
-    .dokan-shipping-qty-wrapper {
-        label {
-            font-weight: normal;
-        }
-    }
-    button.dokan-shipping-calculator {
-        margin-top: 33px;
-    }
 }
